--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
             <div class="container">
                 <a class="navbar-brand" href="#hero">
-                    <img src="images/rdp-logo.png" alt="RDP Stukadoorsbedrijf Logo" class="logo-img" width="200" height="75">
+                    <img src="images/rdplogo.png" alt="RDP Stukadoorsbedrijf Logo" class="logo-img">
                 </a>
                 
                 <!-- Social buttons visible on all screen sizes -->
